# lithium-core

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  lithium.rs  out.rs
.github/workflows/: audit.yml  ci.yml  reproducible-build.yml
docs/: combiner.md  design-decisions.md  glossary.md  index.md  key-hierarchy.md  kyberbox.md  mkprovider-examples.md  reference.md  threat-model.md
examples/: keyfile.rs  kyberbox.rs  password_mkprovider.rs
fuzz/: .gitignore  Cargo.toml  smoke.sh
fuzz/fuzz_targets/: aead_decrypt.rs  double_sig.rs  dual_open.rs  dual_verify.rs  dual_wire.rs  hpke_open.rs  hpke_setup_receiver.rs  hpke_stream.rs  hpke_wire.rs  keyfile_parse.rs  kyberbox_decrypt.rs  opaque_parse.rs  pow_verify.rs  secret_json.rs  sign_verify.rs
src/: error.rs  hexcodec.rs  labels.rs  lib.rs  pow.rs
src/contract/: identity_file.rs  mod.rs  protocol.rs
src/crypto/: aead.rs  context.rs  hash.rs  kdf.rs  keys.rs  kyberbox.rs  mod.rs  sign.rs
src/db/: manager.rs
src/hpke/: aead.rs  context.rs  derive.rs  export.rs  kem.rs  mod.rs  schedule.rs  seal.rs  session.rs  setup.rs  types.rs
src/keys/: keyfile.rs  manager.rs  mod.rs
src/opaque/: client.rs  dek.rs  mod.rs  server.rs  suite.rs
src/passwords/: mod.rs  passwords.rs
src/public/: bytes.rs  mod.rs
src/secrets/: arena.rs  bytes.rs  json.rs  mod.rs  string.rs  types.rs
src/utils/: headers.rs  mod.rs  store.rs
tests/: crypto_tests.rs  double_sig_tests.rs  golden_tests.rs  hpke_stream_tests.rs  hpke_tests.rs  keymanager_arena_tests.rs  keymanager_lock_tests.rs  keymanager_pubcache_tests.rs  keymanager_rotation_tests.rs  opaque_tests.rs  password_tests.rs  secret_tests.rs  store_tests.rs
tests/common/: mod.rs
tests/testdata/: hpke_golden_v1.txt  kyberbox_golden_v1.txt  mldsa87_verify_golden_v1.txt
