[package]
name = "lithium_core"
version = "0.1.0"
edition = "2024"

[features]
fuzzing = []

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
tokio = { version = "1.50.0", features = ["sync", "time", "rt", "macros"] }
uuid = { version = "1.22.0", features = ["v5", "serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
hex = "0.4"
hkdf = "0.12"
password-hash = "0.6.0"
pqcrypto = "0.18.1"
rand = "0.10.0"
secrecy = "0.10.3"
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
serde = { version = "1.0.228", features = ["derive"] }
opaque-ke = { version = "4.0.1", features = ["ristretto255", "argon2"] }
rand_core = { version = "0.6", features = ["getrandom"] }
