[package]
name = "lithium_core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
fuzzing = []

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.3.2", features = ["zeroize", "getrandom"] }
ml-dsa = { version = "0.1.1", features = ["zeroize"] }
zeroize = { version = "1.8.2", features = ["derive"] }
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
hex = "0.4"
hkdf = "0.12"
rand = "0.10.0"
secrecy = "0.10.3"
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
serde = { version = "1.0.228", features = ["derive"] }
opaque-ke = { version = "4.0.1", features = ["ristretto255", "argon2"] }
rand_core = { version = "0.6", features = ["getrandom"] }