[package]
name = "lithium_core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace]
members = ["fuzz"]
default-members = ["."]

[features]
fuzzing = []
# Cleartext-on-disk master-key provider. Off by default. Turn on for tests/examples.
insecure-plaintext-mk = []
# Low-level primitives (explicit-nonce AEAD, bare sign/verify, raw signing-seed access). Off by default; opt in only if you manage the invariants yourself.
raw = []
# Allow disabling master-key rotation (KeyManagerConfig::never_rotate). Off by default. Opt in only when the MK is derived deterministically from a hardware-backed key (e.g. TEE/Keystore) and never persists in raw form, so there is nothing to rotate.
no-mk-rotation = []

[dependencies]
ed25519-dalek = { version = "3.0.0", features = ["zeroize"] }
x25519-dalek = { version = "3.0.0", features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.3.2", features = ["zeroize", "getrandom"] }
ml-dsa = { version = "0.1.1", features = ["zeroize", "getrandom"] }
zeroize = { version = "1.8.2", features = ["derive"] }
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
hex = "0.4"
hkdf = "0.12"
rand = "0.10.0"
secrecy = "0.10.3"
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
serde = { version = "1.0.228", features = ["derive"] }
opaque-ke = { version = "4.0.1", features = ["ristretto255", "argon2"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ErrorReporting",
] }

[[example]]
name = "keyfile"
required-features = ["insecure-plaintext-mk"]