[package]
name = "lithium-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
lithium_core = { path = "..", features = ["fuzzing"] }

[profile.release]
debug = 1

[[bin]]
name = "keyfile_parse"
path = "fuzz_targets/keyfile_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "secret_json"
path = "fuzz_targets/secret_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "opaque_parse"
path = "fuzz_targets/opaque_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kyberbox_decrypt"
path = "fuzz_targets/kyberbox_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aead_decrypt"
path = "fuzz_targets/aead_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sign_verify"
path = "fuzz_targets/sign_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pow_verify"
path = "fuzz_targets/pow_verify.rs"
test = false
doc = false
bench = false
