[package]
name = "lithium-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
lithium_core = { path = "..", features = ["fuzzing", "raw"] }

[[bin]]
name = "keyfile_parse"
path = "fuzz_targets/keyfile_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "secret_json"
path = "fuzz_targets/secret_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "opaque_parse"
path = "fuzz_targets/opaque_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kyberbox_decrypt"
path = "fuzz_targets/kyberbox_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aead_decrypt"
path = "fuzz_targets/aead_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sign_verify"
path = "fuzz_targets/sign_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hpke_wire"
path = "fuzz_targets/hpke_wire.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hpke_open"
path = "fuzz_targets/hpke_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hpke_setup_receiver"
path = "fuzz_targets/hpke_setup_receiver.rs"
test = false
doc = false
bench = false

[[bin]]
name = "double_sig"
path = "fuzz_targets/double_sig.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hpke_stream"
path = "fuzz_targets/hpke_stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dual_open"
path = "fuzz_targets/dual_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dual_verify"
path = "fuzz_targets/dual_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dual_wire"
path = "fuzz_targets/dual_wire.rs"
test = false
doc = false
bench = false
